k8s/base/servers/gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab
    component: mcp-server
  name: mcp-gitlab
spec:
  ports:
    - name: websocket
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: gitlab
  type: ClusterIP
